modifying analysis file

--- a/mushroom_dataset.ipynb
+++ b/mushroom_dataset.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "# to load contraception dataset, you need to pip install ucimlrepo\n",
-    "from ucimlrepo import fetch_ucirepo "
+    "mushrooms = pd.read_csv(\"secondary_data.csv\", sep = \";\")"
    ]
   },
   {
@@ -52,8 +51,112 @@
     }
    ],
    "source": [
-    "mushrooms = pd.read_csv(\"secondary_data.csv\", sep = \";\")\n",
     "mushrooms.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cap-diameter</th>\n",
+       "      <th>stem-height</th>\n",
+       "      <th>stem-width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>61069.000000</td>\n",
+       "      <td>61069.000000</td>\n",
+       "      <td>61069.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.733854</td>\n",
+       "      <td>6.581538</td>\n",
+       "      <td>12.149410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.264845</td>\n",
+       "      <td>3.370017</td>\n",
+       "      <td>10.035955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.380000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.480000</td>\n",
+       "      <td>4.640000</td>\n",
+       "      <td>5.210000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.860000</td>\n",
+       "      <td>5.950000</td>\n",
+       "      <td>10.190000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>8.540000</td>\n",
+       "      <td>7.740000</td>\n",
+       "      <td>16.570000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>62.340000</td>\n",
+       "      <td>33.920000</td>\n",
+       "      <td>103.910000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       cap-diameter   stem-height    stem-width\n",
+       "count  61069.000000  61069.000000  61069.000000\n",
+       "mean       6.733854      6.581538     12.149410\n",
+       "std        5.264845      3.370017     10.035955\n",
+       "min        0.380000      0.000000      0.000000\n",
+       "25%        3.480000      4.640000      5.210000\n",
+       "50%        5.860000      5.950000     10.190000\n",
+       "75%        8.540000      7.740000     16.570000\n",
+       "max       62.340000     33.920000    103.910000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mushrooms.describe()"
    ]
   },
   {
@@ -95,313 +198,6 @@
    ],
    "source": [
     "mushrooms.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>contraceptive_method</th>\n",
-       "      <th>wife_age</th>\n",
-       "      <th>wife_edu</th>\n",
-       "      <th>husband_edu</th>\n",
-       "      <th>num_children</th>\n",
-       "      <th>wife_religion</th>\n",
-       "      <th>wife_working</th>\n",
-       "      <th>husband_occupation</th>\n",
-       "      <th>standard_of_living_index</th>\n",
-       "      <th>media_exposure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>45</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>36</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1468</th>\n",
-       "      <td>3</td>\n",
-       "      <td>33</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1469</th>\n",
-       "      <td>3</td>\n",
-       "      <td>33</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1470</th>\n",
-       "      <td>3</td>\n",
-       "      <td>39</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1471</th>\n",
-       "      <td>3</td>\n",
-       "      <td>33</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1472</th>\n",
-       "      <td>3</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1473 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      contraceptive_method  wife_age  wife_edu  husband_edu  num_children  \\\n",
-       "0                        1        24         2            3             3   \n",
-       "1                        1        45         1            3            10   \n",
-       "2                        1        43         2            3             7   \n",
-       "3                        1        42         3            2             9   \n",
-       "4                        1        36         3            3             8   \n",
-       "...                    ...       ...       ...          ...           ...   \n",
-       "1468                     3        33         4            4             2   \n",
-       "1469                     3        33         4            4             3   \n",
-       "1470                     3        39         3            3             8   \n",
-       "1471                     3        33         3            3             4   \n",
-       "1472                     3        17         3            3             1   \n",
-       "\n",
-       "      wife_religion  wife_working  husband_occupation  \\\n",
-       "0                 1             1                   2   \n",
-       "1                 1             1                   3   \n",
-       "2                 1             1                   3   \n",
-       "3                 1             1                   3   \n",
-       "4                 1             1                   3   \n",
-       "...             ...           ...                 ...   \n",
-       "1468              1             0                   2   \n",
-       "1469              1             1                   1   \n",
-       "1470              1             0                   1   \n",
-       "1471              1             0                   2   \n",
-       "1472              1             1                   2   \n",
-       "\n",
-       "      standard_of_living_index  media_exposure  \n",
-       "0                            3               0  \n",
-       "1                            4               0  \n",
-       "2                            4               0  \n",
-       "3                            3               0  \n",
-       "4                            2               0  \n",
-       "...                        ...             ...  \n",
-       "1468                         4               0  \n",
-       "1469                         4               0  \n",
-       "1470                         4               0  \n",
-       "1471                         2               0  \n",
-       "1472                         4               0  \n",
-       "\n",
-       "[1473 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contraceptive_method_choice = fetch_ucirepo(id=30) \n",
-    "X = contraceptive_method_choice.data.features \n",
-    "y = contraceptive_method_choice.data.targets\n",
-    "\n",
-    "full_dataset = pd.concat([y, X], axis = 1)\n",
-    "full_dataset.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1473 entries, 0 to 1472\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column                    Non-Null Count  Dtype\n",
-      "---  ------                    --------------  -----\n",
-      " 0   contraceptive_method      1473 non-null   int64\n",
-      " 1   wife_age                  1473 non-null   int64\n",
-      " 2   wife_edu                  1473 non-null   int64\n",
-      " 3   husband_edu               1473 non-null   int64\n",
-      " 4   num_children              1473 non-null   int64\n",
-      " 5   wife_religion             1473 non-null   int64\n",
-      " 6   wife_working              1473 non-null   int64\n",
-      " 7   husband_occupation        1473 non-null   int64\n",
-      " 8   standard_of_living_index  1473 non-null   int64\n",
-      " 9   media_exposure            1473 non-null   int64\n",
-      "dtypes: int64(10)\n",
-      "memory usage: 115.2 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "full_dataset.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "contraceptive_method        0\n",
-       "wife_age                    0\n",
-       "wife_edu                    0\n",
-       "husband_edu                 0\n",
-       "num_children                0\n",
-       "wife_religion               0\n",
-       "wife_working                0\n",
-       "husband_occupation          0\n",
-       "standard_of_living_index    0\n",
-       "media_exposure              0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full_dataset.isna().sum()"
    ]
   }
  ],
