--- a/mushroom_dataset.ipynb
+++ b/mushroom_dataset.ipynb
@@ -2,17 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mushrooms = pd.read_csv(\"secondary_data.csv\", sep = \";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,12 +61,13 @@
     }
    ],
    "source": [
-    "mushrooms.info()\n"
+    "# Shape of the dataset, response variable and feature names, data type of each column\n",
+    "mushrooms.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,18 +161,19 @@
        "max       62.340000     33.920000    103.910000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Summary statistics for the numeric features\n",
     "mushrooms.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,13 +203,494 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Count the number of missing values within each column\n",
     "mushrooms.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "p    33888\n",
+       "e    27181\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count the number of observations of poisonous and edible mushrooms\n",
+    "mushrooms[\"class\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Label encoding the response variable and categorical features\n",
+    "le = LabelEncoder()\n",
+    "mask = mushrooms.isna()\n",
+    "cols_to_encode = mushrooms.columns.drop([\"cap-diameter\", \"stem-width\", \"stem-height\"])\n",
+    "\n",
+    "for col in cols_to_encode:\n",
+    "    mushrooms[col] = le.fit_transform(mushrooms[col])\n",
+    "\n",
+    "mushrooms = mushrooms.where(~ mask, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>stem-surface</th>\n",
+       "      <th>stem-color</th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>cap-surface</th>\n",
+       "      <th>cap-color</th>\n",
+       "      <th>does-bruise-or-bleed</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stem-root</th>\n",
+       "      <th>stem-surface</th>\n",
+       "      <th>stem-color</th>\n",
+       "      <th>veil-type</th>\n",
+       "      <th>veil-color</th>\n",
+       "      <th>has-ring</th>\n",
+       "      <th>ring-type</th>\n",
+       "      <th>spore-print-color</th>\n",
+       "      <th>habitat</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.619462</td>\n",
+       "      <td>0.492293</td>\n",
+       "      <td>3.076705</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.873982</td>\n",
+       "      <td>0.601900</td>\n",
+       "      <td>3.385311</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.393432</td>\n",
+       "      <td>0.557061</td>\n",
+       "      <td>3.328931</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.412426</td>\n",
+       "      <td>0.381690</td>\n",
+       "      <td>2.726555</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.501699</td>\n",
+       "      <td>0.503254</td>\n",
+       "      <td>2.952075</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61064</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.054903</td>\n",
+       "      <td>-0.590822</td>\n",
+       "      <td>-0.786809</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61065</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.037808</td>\n",
+       "      <td>-0.669539</td>\n",
+       "      <td>-1.009362</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61066</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.037808</td>\n",
+       "      <td>-0.575875</td>\n",
+       "      <td>-0.807581</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61067</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.043506</td>\n",
+       "      <td>-0.668543</td>\n",
+       "      <td>-0.896602</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61068</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.056802</td>\n",
+       "      <td>-0.667546</td>\n",
+       "      <td>-0.988590</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61069 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       class  cap-shape  stem-surface  stem-color  cap-shape  cap-surface  \\\n",
+       "0          1   1.619462      0.492293    3.076705          6          2.0   \n",
+       "1          1   1.873982      0.601900    3.385311          6          2.0   \n",
+       "2          1   1.393432      0.557061    3.328931          6          2.0   \n",
+       "3          1   1.412426      0.381690    2.726555          2          3.0   \n",
+       "4          1   1.501699      0.503254    2.952075          6          3.0   \n",
+       "...      ...        ...           ...         ...        ...          ...   \n",
+       "61064      1  -1.054903     -0.590822   -0.786809          5          7.0   \n",
+       "61065      1  -1.037808     -0.669539   -1.009362          2          7.0   \n",
+       "61066      1  -1.037808     -0.575875   -0.807581          5          7.0   \n",
+       "61067      1  -1.043506     -0.668543   -0.896602          2          7.0   \n",
+       "61068      1  -1.056802     -0.667546   -0.988590          5          7.0   \n",
+       "\n",
+       "       cap-color  does-bruise-or-bleed  gill-attachment  gill-spacing  ...  \\\n",
+       "0              6                     0              2.0           NaN  ...   \n",
+       "1              6                     0              2.0           NaN  ...   \n",
+       "2              6                     0              2.0           NaN  ...   \n",
+       "3              1                     0              2.0           NaN  ...   \n",
+       "4              6                     0              2.0           NaN  ...   \n",
+       "...          ...                   ...              ...           ...  ...   \n",
+       "61064         11                     0              3.0           2.0  ...   \n",
+       "61065         11                     0              3.0           2.0  ...   \n",
+       "61066         11                     0              3.0           2.0  ...   \n",
+       "61067         11                     0              3.0           2.0  ...   \n",
+       "61068         11                     0              3.0           2.0  ...   \n",
+       "\n",
+       "       stem-root  stem-surface  stem-color  veil-type  veil-color  has-ring  \\\n",
+       "0            4.0           7.0          11        0.0         4.0         1   \n",
+       "1            4.0           7.0          11        0.0         4.0         1   \n",
+       "2            4.0           7.0          11        0.0         4.0         1   \n",
+       "3            4.0           7.0          11        0.0         4.0         1   \n",
+       "4            4.0           7.0          11        0.0         4.0         1   \n",
+       "...          ...           ...         ...        ...         ...       ...   \n",
+       "61064        NaN           NaN          12        NaN         NaN         0   \n",
+       "61065        NaN           NaN          12        NaN         NaN         0   \n",
+       "61066        NaN           NaN          12        NaN         NaN         0   \n",
+       "61067        NaN           NaN          12        NaN         NaN         0   \n",
+       "61068        NaN           NaN          12        NaN         NaN         0   \n",
+       "\n",
+       "       ring-type  spore-print-color  habitat  season  \n",
+       "0            2.0                NaN        0       3  \n",
+       "1            2.0                NaN        0       2  \n",
+       "2            2.0                NaN        0       3  \n",
+       "3            5.0                NaN        0       3  \n",
+       "4            5.0                NaN        0       3  \n",
+       "...          ...                ...      ...     ...  \n",
+       "61064        1.0                NaN        0       0  \n",
+       "61065        1.0                NaN        0       0  \n",
+       "61066        1.0                NaN        0       2  \n",
+       "61067        1.0                NaN        0       2  \n",
+       "61068        1.0                NaN        0       2  \n",
+       "\n",
+       "[61069 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Z-transform the numeric features\n",
+    "quantitative_vars = mushrooms[[\"cap-diameter\", \"stem-width\", \"stem-height\"]]\n",
+    "mushrooms.drop([\"cap-diameter\", \"stem-width\", \"stem-height\"], axis=1, inplace=True)\n",
+    "sc = StandardScaler()\n",
+    "sc.fit(quantitative_vars)\n",
+    "xscaled=sc.transform(quantitative_vars)\n",
+    "\n",
+    "quant_scaled=pd.DataFrame(data=xscaled,columns=mushrooms.columns[[1,9,10]])\n",
+    "mushrooms = pd.concat([quant_scaled, mushrooms], axis = 1)\n",
+    "class_col = mushrooms.pop(\"class\")\n",
+    "mushrooms.insert(0, \"class\", class_col)\n",
+    "mushrooms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 61069 entries, 0 to 61068\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   class                 61069 non-null  int64  \n",
+      " 1   cap-shape             61069 non-null  float64\n",
+      " 2   stem-surface          61069 non-null  float64\n",
+      " 3   stem-color            61069 non-null  float64\n",
+      " 4   cap-shape             61069 non-null  int64  \n",
+      " 5   cap-surface           46949 non-null  float64\n",
+      " 6   cap-color             61069 non-null  int64  \n",
+      " 7   does-bruise-or-bleed  61069 non-null  int64  \n",
+      " 8   gill-attachment       51185 non-null  float64\n",
+      " 9   gill-spacing          36006 non-null  float64\n",
+      " 10  gill-color            61069 non-null  int64  \n",
+      " 11  stem-root             9531 non-null   float64\n",
+      " 12  stem-surface          22945 non-null  float64\n",
+      " 13  stem-color            61069 non-null  int64  \n",
+      " 14  veil-type             3177 non-null   float64\n",
+      " 15  veil-color            7413 non-null   float64\n",
+      " 16  has-ring              61069 non-null  int64  \n",
+      " 17  ring-type             58598 non-null  float64\n",
+      " 18  spore-print-color     6354 non-null   float64\n",
+      " 19  habitat               61069 non-null  int64  \n",
+      " 20  season                61069 non-null  int64  \n",
+      "dtypes: float64(12), int64(9)\n",
+      "memory usage: 9.8 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mushrooms.info()"
    ]
   }
  ],
